--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "eslint-config-prettier": "10.1.8",
     "image-size": "2.0.2",
     "lucide-react": "0.544.0",
-    "next": "15.5.4",
+    "next": "15.6.0-canary.39",
     "posthog-js": "1.268.8",
     "posthog-node": "5.9.2",
     "react": "19.2.0",
