--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "type": "module",
   "scripts": {
     "build": "next build",
-    "build:theme": "bun scripts/build-theme-runtime.ts",
-    "build:presence": "bun scripts/build-presence-runtime.ts",
-    "prebuild": "bun run build:theme && bun run build:presence && bun run sync:pet-gallery",
-    "predev": "bun run build:theme && bun run build:presence",
+    "build:runtimes": "bun scripts/build-runtimes.ts",
+    "prebuild": "bun run build:runtimes && bun run sync:pet-gallery",
+    "predev": "bun run build:runtimes",
     "check": "eslint . && tsc --noEmit",
     "check:all": "bun run typecheck && bun run format:check && bun run lint",
     "fix:all": "bun run format:write && bun run lint:fix",
@@ -19,7 +18,7 @@
     "lint:fix": "eslint --fix .",
     "preview": "next build && next start",
     "start": "next start",
-    "typecheck": "bun run build:theme && bun run build:presence && tsc --noEmit",
+    "typecheck": "bun run build:runtimes && tsc --noEmit",
     "sync:pet-gallery": "bun scripts/sync-pet-gallery.ts"
   },
   "dependencies": {
