--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "preview": "next build && next start",
     "start": "next start",
     "typecheck": "bun run build:runtimes && tsc --noEmit",
-    "sync:pet-gallery": "bun scripts/sync-pet-gallery.ts"
+    "sync:pet-gallery": "bun scripts/sync-pet-gallery.ts",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "1.1.15",
@@ -79,7 +81,8 @@
     "tailwindcss": "4.1.14",
     "tw-animate-css": "1.4.0",
     "typescript": "5.9.3",
-    "typescript-eslint": "8.45.0"
+    "typescript-eslint": "8.45.0",
+    "vitest": "2.1.8"
   },
   "ct3aMetadata": {
     "initVersion": "7.39.3"
