--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -24,6 +24,11 @@ jobs:
       - name: Run Lighthouse CI
         id: lhci
         continue-on-error: true
+        env:
+          # Skip strict env validation during build/preview
+          SKIP_ENV_VALIDATION: "1"
+          NODE_ENV: "production"
+          NEXT_TELEMETRY_DISABLED: "1"
         run: |
           set +e
           bunx -y @lhci/cli@0.14.x autorun --config=.lighthouserc.json
