--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "typecheck": "bun run build:runtimes && tsc --noEmit",
     "sync:pet-gallery": "bun scripts/sync-pet-gallery.ts",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "knip": "knip",
+    "knip:strict": "knip --strict",
+    "knip:deps": "knip --dependencies"
   },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "1.1.15",
@@ -63,15 +66,16 @@
   "devDependencies": {
     "@eslint/eslintrc": "3.3.1",
     "@tailwindcss/postcss": "4.1.14",
+    "@types/canvas-confetti": "1.9.0",
+    "@types/js-cookie": "3.0.6",
     "@types/node": "22.18.8",
     "@types/react": "19.2.0",
     "@types/react-dom": "19.2.0",
-    "@types/canvas-confetti": "1.9.0",
-    "@types/js-cookie": "3.0.6",
     "esbuild": "0.25.10",
     "eslint": "9.36.0",
     "eslint-config-next": "15.5.4",
     "eslint-plugin-unicorn": "61.0.2",
+    "knip": "5.64.1",
     "postcss": "8.5.6",
     "prettier": "3.6.2",
     "prettier-plugin-multiline-arrays": "4.0.3",
