refactor: Update Knip script to check only dependencies

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -122,12 +122,12 @@
       "problemMatcher": []
     },
     {
-      "label": "bun knip:strict",
+      "label": "bun knip:deps",
       "type": "shell",
       "command": "bun",
       "args": [
         "run",
-        "knip:strict"
+        "knip:deps"
       ],
       "options": {
         "cwd": "${workspaceFolder}"
