--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,9 +2,9 @@ name: Lint
 
 on:
   push:
-    branches: ['main']
+    branches: ["main"]
   pull_request:
-    branches: ['*', '*/*', '**']
+    branches: ["*", "*/*", "**"]
   workflow_dispatch:
 
 jobs:
@@ -18,7 +18,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v5
         with:
-          node-version: '22'
+          node-version: "22"
 
       - name: Install bun
         uses: oven-sh/setup-bun@v2
@@ -38,3 +38,6 @@ jobs:
 
       - name: Check Prettier formatting
         run: bun run format:check
+
+      - name: Run knip
+        run: bun run knip
