--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "predev": "bun run build:runtimes",
     "prepreview": "bun run prebuild",
     "check": "eslint . && tsc --noEmit",
-    "check:all": "bun run typecheck && bun run format:check && bun run lint",
+    "check:all": "bun run typecheck && bun run format:check && bun run lint && bun run knip",
     "fix:all": "bun run format:write && bun run lint:fix",
     "dev": "next dev --turbo",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
