--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "image-size": "2.0.2",
     "js-cookie": "3.0.5",
     "lucide-react": "0.544.0",
+    "motion": "12.23.22",
     "next": "15.6.0-canary.42",
     "posthog-js": "1.268.9",
     "react": "19.2.0",
