chore(vscode): add sonarlint connected mode configuration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,9 @@
   "files.associations": {
     "*.css": "tailwindcss"
   },
-  "typescript.experimental.useTsgo": true
+  "typescript.experimental.useTsgo": true,
+  "sonarlint.connectedMode.project": {
+    "connectionId": "kiliantyler",
+    "projectKey": "kiliantyler_kil.dev"
+  }
 }
