ci(workflow): Adds build step for tests

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Install dependencies
         run: bun install --frozen-lockfile
 
+      - name: Build Scripts
+        run: bun run build:runtimes
+
       - name: Run Vitest (with JUnit + GA reporters)
         id: vitest
         continue-on-error: true
