--- a/tsconfig.json
+++ b/tsconfig.json
@@ -48,7 +48,8 @@
     ".storybook/**/*.tsx",
     "**/*.cjs",
     "**/*.js",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    ".next/dev/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
