feat: update to next 16 canary

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@upstash/ratelimit": "2.0.6",
     "@upstash/redis": "1.35.5",
     "@vercel/blob": "2.0.0",
+    "babel-plugin-react-compiler": "1.0.0",
     "canvas-confetti": "1.9.3",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
@@ -46,7 +47,7 @@
     "js-cookie": "3.0.5",
     "lucide-react": "0.544.0",
     "motion": "12.23.22",
-    "next": "15.6.0-canary.57",
+    "next": "16.0.0-canary.1",
     "posthog-js": "1.270.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
