--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -21,6 +21,11 @@ jobs:
       - name: Install dependencies
         run: bun install --frozen-lockfile
 
+      - name: Next Typegen
+        run: bun run next typegen
+        env:
+          SKIP_ENV_VALIDATION: true
+
       - name: Build runtimes
         run: bun run build:runtimes
 
