--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -28,6 +28,11 @@ jobs:
       - name: Install dependencies
         run: bun install
 
+      - name: Next Typegen
+        run: bun run next typegen
+        env:
+          SKIP_ENV_VALIDATION: true
+
       - name: Run ESLint
         run: bun run lint
         env:
