--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,11 @@ jobs:
       - name: Install dependencies
         run: bun install --frozen-lockfile
 
+      - name: Next Typegen
+        run: bun run next typegen
+        env:
+          SKIP_ENV_VALIDATION: true
+
       - name: Build Scripts
         run: bun run build:runtimes
 
