--- a/package.json
+++ b/package.json
@@ -23,6 +23,12 @@
     "sync:pet-gallery": "bun scripts/sync-pet-gallery.ts",
     "test": "vitest run",
     "test:watch": "vitest",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:report": "playwright show-report",
+    "test:all": "vitest run && playwright test",
     "knip": "knip",
     "knip:deps": "knip --dependencies"
   },
@@ -63,6 +69,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "3.3.1",
+    "@playwright/test": "1.49.1",
     "@tailwindcss/postcss": "4.1.14",
     "@types/canvas-confetti": "1.9.0",
     "@types/js-cookie": "3.0.6",
