fix: don't need env vars for playwright

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -30,6 +30,8 @@ jobs:
 
       - name: Run Playwright tests (shard ${{ matrix.shardIndex }}/${{ matrix.shardTotal }})
         run: bunx playwright test --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }}
+        env:
+          SKIP_ENV_VALIDATION: true
 
       - name: Upload blob report to GitHub Actions Artifacts
         if: ${{ !cancelled() }}
