--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -32,9 +32,10 @@ jobs:
         run: bunx playwright test --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }}
         env:
           SKIP_ENV_VALIDATION: true
+          BLOB_READ_WRITE_TOKEN: ${{ secrets.BLOB_READ_WRITE_TOKEN }}
 
       - name: Upload blob report to GitHub Actions Artifacts
-        if: ${{ !cancelled() }}
+        if: ${{ always() && !cancelled() }}
         uses: actions/upload-artifact@v4
         with:
           name: blob-report-${{ matrix.shardIndex }}
@@ -42,7 +43,7 @@ jobs:
           retention-days: 1
 
   merge-reports:
-    if: ${{ !cancelled() }}
+    if: ${{ always() && !cancelled() }}
     needs: [playwright-tests]
     runs-on: ubuntu-latest
     steps:
