feat: next canary needs to PR quickly

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -103,6 +103,12 @@
       automerge: true,
       pinDigests: true,
     },
+    {
+      matchPackageNames: [
+        "next"
+      ],
+      minimumReleaseAge: "0 days",
+    }
   ],
   lockFileMaintenance: {
     enabled: true,
