ci(workflows): Optimizes workflow concurrency

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -15,6 +15,10 @@ on:
       - "vitest.config.ts"
       - ".github/workflows/playwright.yml"
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
+
 jobs:
   playwright-tests:
     timeout-minutes: 60
