--- a/package.json
+++ b/package.json
@@ -41,13 +41,12 @@
     "@radix-ui/react-switch": "1.2.6",
     "@radix-ui/react-tooltip": "1.2.8",
     "@t3-oss/env-nextjs": "0.13.8",
-    "@upstash/ratelimit": "2.0.6",
-    "@upstash/redis": "1.35.6",
     "@vercel/blob": "2.0.0",
     "babel-plugin-react-compiler": "1.0.0",
     "canvas-confetti": "1.9.4",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
+    "convex": "^1.28.2",
     "date-fns": "4.1.0",
     "eslint-config-prettier": "10.1.8",
     "image-size": "2.0.2",
