chore: update configuration for Convex integration
- Add convex/_generated/** to ESLint ignores
- Add convex/_generated/** to Prettier ignores
- Update TypeScript config for Convex compatibility

--- a/.knip.jsonc
+++ b/.knip.jsonc
@@ -12,10 +12,7 @@
     "components.json",
     "docs/**/*.{md,mdx}"
   ],
-  "ignoreDependencies": [
-    "tailwindcss",
-    "tw-animate-css"
-  ],
+  "ignoreDependencies": [],
   "ignore": [
     "node_modules/**",
     ".next/**",
