--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /src/utils/theme-bundle.ts
 /src/utils/presence-bundle.ts
 /public/pet-gallery/
+/convex/_generated/
 
 # dependencies
 /node_modules
