fix: renovate squash fix

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -12,7 +12,7 @@
   semanticCommitType: "chore",
   semanticCommitScope: "deps",
   automergeType: "pr",
-  automergeStrategy: "auto",
+  automergeStrategy: "squash",
   packageRules: [
     {
       matchUpdateTypes: [
