--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "prebuild": "bun run build:runtimes && bun run sync:pet-gallery",
     "predev": "bun run build:runtimes",
     "prepreview": "bun run prebuild",
-    "check": "eslint . && tsc --noEmit",
+    "check": "oxlint --deny-warnings . && tsc --noEmit",
     "check:all": "bun run typecheck && bun run format:check && bun run lint && bun run knip",
     "fix:all": "bun run format:write && bun run lint:fix",
     "dev": "next dev --turbo",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
-    "lint": "eslint .",
-    "lint:fix": "eslint --fix .",
+    "lint": "oxlint --deny-warnings .",
+    "lint:fix": "oxlint --fix .",
     "preview": "next build && next start",
     "start": "next start",
     "typecheck": "bun run build:runtimes && tsc --noEmit",
@@ -48,7 +48,6 @@
     "clsx": "2.1.1",
     "convex": "1.28.2",
     "date-fns": "4.1.0",
-    "eslint-config-prettier": "10.1.8",
     "image-size": "2.0.2",
     "js-cookie": "3.0.5",
     "lucide-react": "0.553.0",
@@ -76,10 +75,8 @@
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
     "esbuild": "0.26.0",
-    "eslint": "9.39.1",
-    "eslint-config-next": "16.0.1",
-    "eslint-plugin-unicorn": "62.0.0",
     "knip": "5.68.0",
+    "oxlint": "^1.26.0",
     "postcss": "8.5.6",
     "prettier": "3.6.2",
     "prettier-plugin-multiline-arrays": "4.0.3",
@@ -90,7 +87,6 @@
     "tailwindcss": "4.1.17",
     "tw-animate-css": "1.4.0",
     "typescript": "5.9.3",
-    "typescript-eslint": "8.46.3",
     "vitest": "4.0.8"
   },
   "ct3aMetadata": {
