--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@types/node": "22.19.1",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
+    "esbuild": "0.27.1",
     "knip": "5.74.0",
     "oxlint": "1.33.0",
     "postcss": "8.5.6",
@@ -86,7 +87,7 @@
     "tailwindcss": "4.1.18",
     "tw-animate-css": "1.4.0",
     "typescript": "5.9.3",
-    "vitest": "4.0.16"
+    "vitest": "4.0.15"
   },
   "ct3aMetadata": {
     "initVersion": "7.39.3"
